--- a/index.html
+++ b/index.html
@@ -9,6 +9,14 @@
 </head>
 
 <body>
+  <h1>CALCULADORA :)</h1>
+  <form id="form">
+    <input type="number" name="" id="inputOne">
+    <p> + </p>
+    <input type="number" name="" id="inputTwo">
+    <button id="btn">Calcular</button>
+  </form>
+  <p id="result"> Resultado:</p>
   <script src="app.js"></script>
 </body>
 
