--- a/index.html
+++ b/index.html
@@ -9,14 +9,20 @@
 </head>
 
 <body>
-  <h1>CALCULADORA :)</h1>
-  <form id="form">
-    <input type="number" name="" id="inputOne">
-    <p> + </p>
-    <input type="number" name="" id="inputTwo">
-    <button id="btn">Calcular</button>
-  </form>
-  <p id="result"> Resultado:</p>
+  <main>
+    <div>
+      <h1>CALCULADORA :)</h1>
+      <form id="form">
+        <label>
+          <input type="number" name="" id="inputOne"></label>
+        <p> + </p>
+        <label>
+          <input type="number" name="" id="inputTwo"></label>
+        <button type="submit" id="btn">Calcular</button>
+      </form>
+      <p id="result"> Resultado:</p>
+    </div>
+  </main>
   <script src="app.js"></script>
 </body>
 
